<resources>
    <string name="app_name">Room Assignment</string>
    <string name="phone_number">Phone Number</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="add_new">Add New</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="next">Next</string>
    <string name="prompt_username">Username</string>
</resources>